name:                haskell-programming
version:             0.1.0.0
synopsis:            Working through Haskell Programming
description:         Please see README.org
homepage:            http://github.com/yurrriq/haskell-programming
license:             MIT
license-file:        LICENSE
author:              Eric Bailey
maintainer:          eric@ericb.me
copyright:           2016 Eric Bailey
category:            Development
build-type:          Simple
-- extra-source-files:
extra-doc-files:     resources/*.png
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     McCarthy
                     , WordNumber
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite haskell-programming-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , haskell-programming
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yurrriq/haskell-programming
